--- a/src/scss/_game.scss
+++ b/src/scss/_game.scss
@@ -1,4 +1,5 @@
 .game {
+  max-width: 75vw;
   input {
     width: 100%;
     font-size: 2em;
@@ -9,6 +10,10 @@
     &::placeholder {
       color: white;
     }
+  }
+
+  h1 {
+    background-color: gray;
   }
 
   .score {
