--- a/src/scss/_game.scss
+++ b/src/scss/_game.scss
@@ -12,7 +12,7 @@
     }
   }
 
-  h1 {
+  .paragraph {
     background-color: gray;
   }
 
@@ -23,6 +23,24 @@
 
     h1 {
       margin: 0;
+    }
+  }
+
+  table {
+    width: 100%;
+    border: 1px solid white;
+
+    thead {
+      th {
+        font-size: 2.2em;
+        border: 1px solid white;
+      }
+    }
+
+    td {
+      font-size: 2em;
+      width: 50%;
+      text-align: center;
     }
   }
 }
